[tool.poetry]
name = "carto"
version = "0.1.0"
description = "Generateur de villages medievaux aleatoire"
readme = 'README.md'
authors = ["adrien MERAT <adrien.merat@epita.fr>", "nathan HABIB <nathan.habib@epita.fr>" ]
packages = [ { include = "src", format = "sdist" },
             { include = "tests", format = "sdist" },
             { include = "docs" }
           ]

[tool.poetry.dependencies]
python = "^3.9"
Fiona = "1.8.20"
Shapely = "1.7.1"
geopandas = "0.9.0"
numpy = "1.20.3"
matplotlib = "3.4.2"
scipy = "1.6.3"

[tool.poetry.dev-dependencies]
pytest = "5.2"
autopep8 = "1.5.7"
pylint = "^2.9.3"
ipykernel = "^6.0.1"
Sphinx = "^4.0.2"
sphinx-autoapi = "^1.8.1"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
